--- a/mindbox-task-dev.yaml
+++ b/mindbox-task-dev.yaml
@@ -28,7 +28,7 @@ spec:
             - name: REDIS_PORT
               value: "6379"
             - name: CACHE_TTL
-              value: 900000 # cache TTL set to 15 minutes
+              value: "900000" # cache TTL set to 15 minutes
 ---
 apiVersion: v1
 kind: Service
